tests/patching/errors/load_missing_file.dby
import std.buffer as buf
let b = buf.load("non_existent_file.bin")
